[gd_scene load_steps=4 format=3 uid="uid://bgqnudjl5hl07"]

[ext_resource type="Script" path="res://main.gd" id="1_643et"]
[ext_resource type="Texture2D" uid="uid://dn3hiqrhjindy" path="res://MMM logo.svg.png" id="2_nrhwk"]
[ext_resource type="FontFile" uid="uid://2no0t7l41urh" path="res://Comic_Neue/ComicNeue-Regular.ttf" id="3_l8f6j"]

[node name="Main" type="Node2D"]
script = ExtResource("1_643et")

[node name="MmmLogo_svg" type="Sprite2D" parent="."]
position = Vector2(440.338, 336.125)
scale = Vector2(0.879053, 0.879053)
texture = ExtResource("2_nrhwk")

[node name="Exit" type="Button" parent="."]
offset_left = 888.0
offset_top = 520.0
offset_right = 1154.0
offset_bottom = 646.0
theme_override_fonts/font = ExtResource("3_l8f6j")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Save" type="Button" parent="."]
offset_left = 888.0
offset_top = 392.0
offset_right = 1154.0
offset_bottom = 518.0
theme_override_fonts/font = ExtResource("3_l8f6j")
theme_override_font_sizes/font_size = 50
text = "Save"

[node name="View" type="Button" parent="."]
offset_left = 888.0
offset_top = 264.0
offset_right = 1154.0
offset_bottom = 390.0
theme_override_fonts/font = ExtResource("3_l8f6j")
theme_override_font_sizes/font_size = 50
text = "View"

[node name="Newlist" type="Button" parent="."]
offset_left = 888.0
offset_top = 136.0
offset_right = 1154.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("3_l8f6j")
theme_override_font_sizes/font_size = 50
text = "New List"

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="tree_exiting" from="Save" to="." method="_on_save_tree_exiting"]
[connection signal="pressed" from="View" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Newlist" to="." method="_on_newlist_pressed"]
